Solved problem 5 With the help of solution, learnt proper use of margin-bottom, padding, gap, align-items and flex-shrink.

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -15,11 +15,27 @@ body {
   justify-content: center;
 }
 
+
+
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  gap:16px;
+  padding:16px;
+  
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  font-size: 20px;
+  align-items: center;
+  margin-bottom: 8px;
+  
 }
 
 .icon {
@@ -33,6 +49,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+ 
+  
 }
 
 .close-button {
@@ -66,4 +85,8 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.text{
+  margin-bottom: 16px;
 }
